--- a/privacy.html
+++ b/privacy.html
@@ -8,23 +8,24 @@
         body {
             margin: 0;
             font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif;
-            background-color: #121212; /* Dark background */
-            color: #e0e0e0; /* Light text color */
+            background-color: #000; /* Deep black background */
+            color: #e0e0e0; /* Light gray text */
             overflow-x: hidden;
+            scroll-behavior: smooth; /* Smooth scrolling */
         }
 
         header {
-            background-color: #1f1f1f; /* Slightly lighter dark background */
+            background: linear-gradient(to bottom, rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 1)); /* Dark gradient */
             color: #fff;
             padding: 100px 20px;
             text-align: center;
             position: relative;
-            border-bottom: 1px solid #333; /* Subtle bottom border */
+            border-bottom: 1px solid rgba(255, 255, 255, 0.1); /* Subtle border */
         }
 
         header h1 {
             font-size: 60px;
-            font-weight: bold;
+            font-weight: 900;
             margin: 0;
             animation: fadeIn 2s ease-in-out;
         }
@@ -41,15 +42,15 @@
             opacity: 0;
             transform: translateY(50px);
             transition: all 1.5s ease-in-out;
-            max-width: 900px;
+            max-width: 1200px;
             margin: 0 auto;
         }
 
         section h2 {
-            font-size: 42px;
+            font-size: 48px;
             margin-bottom: 20px;
-            font-weight: bold;
-            color: #e0e0e0; /* Light text color */
+            font-weight: 800;
+            color: #fff; /* Light text color */
             animation: fadeIn 2s ease-in-out;
         }
 
@@ -57,7 +58,7 @@
             font-size: 24px;
             margin-bottom: 60px;
             line-height: 1.6;
-            color: #b0b0b0; /* Slightly dimmer text color */
+            color: #d0d0d0; /* Slightly dimmer text color */
             animation: fadeIn 2s ease-in-out 0.5s;
         }
 
@@ -70,12 +71,12 @@
         }
 
         .card {
-            background: #1e1e1e; /* Darker card background */
+            background: rgba(25, 25, 25, 0.9); /* Semi-transparent dark background */
             padding: 40px;
             margin: 40px auto;
             border-radius: 20px;
-            box-shadow: 0 10px 30px rgba(0, 0, 0, 0.3); /* Enhanced shadow for dark mode */
-            max-width: 600px;
+            box-shadow: 0 15px 30px rgba(0, 0, 0, 0.5); /* Deep shadow for 3D effect */
+            max-width: 800px;
             transition: transform 0.5s ease, box-shadow 0.5s ease;
             opacity: 0;
             transform: translateY(50px);
@@ -92,11 +93,11 @@
         }
 
         footer {
-            background-color: #1f1f1f; /* Consistent dark background */
+            background-color: rgba(0, 0, 0, 0.8); /* Darker background for footer */
             color: #e0e0e0;
             text-align: center;
             padding: 30px 20px;
-            border-top: 1px solid #333; /* Subtle top border */
+            border-top: 1px solid rgba(255, 255, 255, 0.1); /* Subtle border */
         }
 
         footer p {
@@ -115,7 +116,7 @@
         }
 
         @keyframes textReveal {
-            0% { content: '**********'; opacity: 0; }
+            0% { opacity: 0; }
             100% { opacity: 1; }
         }
 
