--- a/privacy.html
+++ b/privacy.html
@@ -40,10 +40,11 @@
             padding: 100px 20px;
             text-align: center;
             opacity: 0;
-            transform: translateY(50px);
+            transform: translateY(100px);
             transition: all 1.5s ease-in-out;
             max-width: 1200px;
             margin: 0 auto;
+            position: relative;
         }
 
         section h2 {
@@ -51,7 +52,9 @@
             margin-bottom: 20px;
             font-weight: 800;
             color: #fff; /* Light text color */
-            animation: fadeIn 2s ease-in-out;
+            transform: scale(0.8);
+            opacity: 0;
+            transition: transform 1s ease-in-out, opacity 1s ease-in-out;
         }
 
         section p {
@@ -59,7 +62,9 @@
             margin-bottom: 60px;
             line-height: 1.6;
             color: #d0d0d0; /* Slightly dimmer text color */
-            animation: fadeIn 2s ease-in-out 0.5s;
+            opacity: 0;
+            transition: opacity 1s ease-in-out, transform 1s ease-in-out;
+            transform: scale(0.9);
         }
 
         .hidden-text {
@@ -67,7 +72,7 @@
             opacity: 0;
             font-weight: bold;
             letter-spacing: 2px;
-            transition: all 1s ease-in-out;
+            transition: opacity 1s ease-in-out;
         }
 
         .card {
@@ -111,13 +116,19 @@
         }
 
         @keyframes slideUp {
-            0% { transform: translateY(50px); opacity: 0; }
+            0% { transform: translateY(100px); opacity: 0; }
             100% { transform: translateY(0); opacity: 1; }
         }
 
         @keyframes textReveal {
             0% { opacity: 0; }
             100% { opacity: 1; }
+        }
+
+        .section-active h2,
+        .section-active p {
+            opacity: 1;
+            transform: scale(1);
         }
 
         .section-active {
@@ -182,7 +193,6 @@
     </footer>
 
     <script>
-        // Function to handle scroll-triggered animations
         function handleScroll() {
             const sections = document.querySelectorAll('section');
             const hiddenTexts = document.querySelectorAll('.hidden-text');
@@ -214,10 +224,7 @@
             });
         }
 
-        // Event listener for scroll
         window.addEventListener('scroll', handleScroll);
-
-        // Initial trigger to animate any sections already in view on load
         handleScroll();
     </script>
 </body>
