--- a/privacy.html
+++ b/privacy.html
@@ -27,13 +27,13 @@
             font-size: 60px;
             font-weight: 900;
             margin: 0;
-            animation: fadeIn 2s ease-in-out;
+            animation: fadeIn 2s ease-out;
         }
 
         header p {
             font-size: 24px;
             margin-top: 20px;
-            animation: fadeIn 2s ease-in-out 1s;
+            animation: fadeIn 2s ease-out 1s;
         }
 
         section {
