--- a/privacy.html
+++ b/privacy.html
@@ -33,7 +33,7 @@
         header p {
             font-size: 24px;
             margin-top: 20px;
-            animation: fadeIn 2s ease-out 1s;
+            animation: fadeIn 2s ease-out;
         }
 
         section {
