--- a/privacy.html
+++ b/privacy.html
@@ -189,7 +189,7 @@
     </section>
 
     <footer>
-        <p>&copy; 2024 Tudify. All rights reserved.</p>
+        <p>&copy; 2024 Tudify. All rights reserved. Privacy and transparency not guaranteed, depending on device, platform, time, or geoloctaion.</p>
     </footer>
 
     <script>
