--- a/privacy.html
+++ b/privacy.html
@@ -189,7 +189,7 @@
     </section>
 
     <footer>
-        <p>&copy; 2024 Tudify. All rights reserved. Privacy and transparency not guaranteed, depending on device, platform, time, or geoloctaion.</p>
+        <p>&copy; 2024 Tudify. All rights reserved. Privacy and transparency not guaranteed, depending on device, platform, time, or geoloctaion. Data can be given to authorities that we believe to be safe and secure. Privacy features will not collect any data, under STRICT policy.</p>
     </footer>
 
     <script>
