--- a/DepthUI.htm
+++ b/DepthUI.htm
@@ -13,8 +13,8 @@
             font-family: 'DM Sans', sans-serif;
             margin: 0;
             padding: 0;
-            background-color: #f4f4f8;
-            color: #333;
+            background-color: #1a1a1a;
+            color: #f0f0f0;
         }
         h1, h2 {
             text-align: center;
@@ -26,37 +26,62 @@
             color: #fff;
         }
 
-        /* Scrollable Image Section */
-        .scrolling-images {
+        /* Expanding Stack of Images */
+        .stacked-images {
+            position: relative;
+            max-width: 90%;
+            margin: 0 auto;
             display: flex;
-            overflow-x: auto;
-            white-space: nowrap;
-            padding: 20px;
-            background: #eee;
+            flex-direction: column;
+            align-items: center;
+            perspective: 1000px;
         }
-        .scrolling-images img {
-            height: 200px;
-            margin: 0 10px;
+        .stacked-images img {
+            position: absolute;
+            width: 80%;
+            height: auto;
             border-radius: 8px;
-            transition: transform 0.3s;
+            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+            transition: transform 0.4s ease, opacity 0.4s ease;
         }
-        .scrolling-images img:hover {
-            transform: scale(1.05);
+        .stacked-images img:nth-child(1) { transform: translateY(0px) scale(0.9); }
+        .stacked-images img:nth-child(2) { transform: translateY(20px) scale(0.95); }
+        .stacked-images img:nth-child(3) { transform: translateY(40px) scale(1); }
+
+        /* Expand effect on scroll */
+        .stacked-images img:hover {
+            transform: translateY(-10px) scale(1.05);
+            opacity: 1;
+            z-index: 1;
         }
 
-        /* Sections for Details */
+        /* Sections with Image and Text Side-by-Side */
         .section {
-            max-width: 800px;
+            display: flex;
+            align-items: center;
+            max-width: 1200px;
             margin: 40px auto;
             padding: 20px;
-            background-color: #fff;
+            background-color: #252525;
             border-radius: 8px;
-            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-            text-align: center;
+            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.3);
         }
+        .section:nth-child(even) { flex-direction: row-reverse; }
         .section img {
-            max-width: 100%;
+            width: 45%;
+            height: auto;
             border-radius: 8px;
+            margin: 0 20px;
+        }
+        .section-text {
+            flex: 1;
+            text-align: left;
+        }
+        h2 {
+            color: #ffd700;
+        }
+        p {
+            color: #ccc;
         }
     </style>
 </head>
@@ -67,8 +92,8 @@
         <p>Experience a new level of mobile UI</p>
     </div>
 
-    <!-- Scrolling Image Section -->
-    <div class="scrolling-images">
+    <!-- Stacked Images at the Top -->
+    <div class="stacked-images">
         <img src="hs.png" alt="Home Screen">
         <img src="m.png" alt="Messages">
         <img src="ab.png" alt="About">
@@ -76,23 +101,29 @@
 
     <!-- Home Screen Section -->
     <div class="section" id="home-screen">
-        <h2>Home Screen</h2>
         <img src="hs.png" alt="Home Screen">
-        <p>DepthUI’s beautifully modern Home Screen, designed for simplicity and ease of use.</p>
+        <div class="section-text">
+            <h2>Home Screen</h2>
+            <p>DepthUI’s beautifully modern Home Screen, designed for simplicity and ease of use. Swipe through your apps, check notifications, and stay updated at a glance.</p>
+        </div>
     </div>
 
     <!-- Messages Screen Section -->
     <div class="section" id="messages-screen">
-        <h2>Messages</h2>
         <img src="m.png" alt="Messages Screen">
-        <p>Stay connected seamlessly with DepthUI’s message interface, offering clear and streamlined communication.</p>
+        <div class="section-text">
+            <h2>Messages</h2>
+            <p>Stay connected seamlessly with DepthUI’s message interface, designed for clear and easy communication. Whether texting or using voice, DepthUI ensures a seamless experience.</p>
+        </div>
     </div>
 
     <!-- About Section -->
     <div class="section" id="about">
-        <h2>About DepthUI</h2>
         <img src="ab.png" alt="About DepthUI">
-        <p>DepthUI brings you an innovative mobile experience by Tudify, merging design and functionality.</p>
+        <div class="section-text">
+            <h2>About DepthUI</h2>
+            <p>DepthUI by Tudify brings you an innovative mobile experience, combining design and functionality in one. Each screen and feature is designed with user experience in mind.</p>
+        </div>
     </div>
 
 </body>
