--- a/DepthUI.htm
+++ b/DepthUI.htm
@@ -121,7 +121,7 @@
     <div class="section" id="about">
         <img src="ab.png" alt="About DepthUI">
         <div class="section-text">
-            <h2>About DepthUI</h2>
+            <h2>App Browser</h2>
             <p>DepthUI by Tudify brings you an innovative mobile experience, combining design and functionality in one. Each screen and feature is designed with user experience in mind.</p>
         </div>
     </div>
