--- a/DepthUI.htm
+++ b/DepthUI.htm
@@ -29,7 +29,7 @@
         /* Expanding Stack of Images */
         .stacked-images {
             position: relative;
-            max-width: 90%;
+            max-width: 500px;
             margin: 0 auto;
             display: flex;
             flex-direction: column;
