--- a/DepthUI.htm
+++ b/DepthUI.htm
@@ -34,11 +34,11 @@
             display: flex;
             flex-direction: column;
             align-items: center;
-            perspective: 1000px;
+            perspective: 100px;
         }
         .stacked-images img {
             position: absolute;
-            width: 80%;
+            max-width: 500px;
             height: auto;
             border-radius: 8px;
             box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
