--- a/EAS/index.htm
+++ b/EAS/index.htm
@@ -113,8 +113,8 @@
 <section id="eas" class="fade-in">
     <h2>Emergency Alert System</h2>
     <p>DepthUI's Emergency Alert System (EAS) provides instant alerts in critical situations. Stay informed, stay safe.</p>
-    <img src="EAS.png" alt="DepthUI Emergency Alert System Interface">
-    <video src="eas.mp4" autoplay muted loop controls></video>
+    <img src="/EAS.png" alt="DepthUI Emergency Alert System Interface">
+    <video src="/eas.mp4" autoplay muted loop controls></video>
 </section>
 
 <!-- Footer -->
