--- a/EAS/index.htm
+++ b/EAS/index.htm
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>DepthUI - Emergency Alert System</title>
     <style>
-        /* Basic Reset! */
+        /* Basic Reset */
         * {
             margin: 0;
             padding: 0;
