--- a/EAS/index.htm
+++ b/EAS/index.htm
@@ -66,9 +66,16 @@
             color: #444;
             margin-bottom: 30px;
         }
-        #eas img, #eas video {
+        #eas video {
             width: 70%;
             max-width: 600px;
+            border-radius: 10px;
+            box-shadow: 0px 4px 10px rgba(0,0,0,0.1);
+            margin-bottom: 20px;
+        }
+        #eas img {
+            width: 70%;
+            max-width: 300px;
             border-radius: 10px;
             box-shadow: 0px 4px 10px rgba(0,0,0,0.1);
             margin-bottom: 20px;
