--- a/EAS/index.htm
+++ b/EAS/index.htm
@@ -25,10 +25,16 @@
             min-height: 100vh;
         }
         /* Hero Section */
+/* Hero Section */
         #hero {
             background: linear-gradient(120deg, #1a1a2e, #16213e);
             color: #fff;
             text-align: center;
+            display: flex;
+            flex-direction: column;
+            justify-content: center;
+            align-items: center;
+            height: 100vh; /* Make the hero section full viewport height */
         }
         #hero h1 {
             font-size: 3em;
