--- a/EAS/index.htm
+++ b/EAS/index.htm
@@ -2,7 +2,8 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <link href="https://fonts.googleapis.com/css2?family=DM+Mono:ital,wght@0,300;0,400;0,500;1,300;1,400;1,500&family=DM+Sans:ital,opsz,wght@0,9..40,100..1000;1,9..40,100..1000&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=DM+Mono:ital,wght@0,300;0,400;0,500;1,300;1,400;1,500&family=DM+Sans:ital,opsz,wght@0,9..40,100..1000&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>DepthUI - Emergency Alert System</title>
     <style>
@@ -13,7 +14,7 @@
             box-sizing: border-box;
         }
         body {
-            font-family: "DM sans", sans-serif;
+            font-family: "DM Sans", sans-serif;
             scroll-behavior: smooth;
         }
         /* Section Styling */
@@ -25,7 +26,6 @@
             min-height: 100vh;
         }
         /* Hero Section */
-/* Hero Section */
         #hero {
             background: linear-gradient(120deg, #1a1a2e, #16213e);
             color: #fff;
@@ -34,7 +34,33 @@
             flex-direction: column;
             justify-content: center;
             align-items: center;
-            height: 100vh; /* Make the hero section full viewport height */
+            height: 100vh;
+        }
+        .hero-icons {
+            display: flex;
+            gap: 20px;
+            margin-bottom: 20px;
+        }
+        .icon-animate {
+            font-size: 2.5em;
+            color: #e94560;
+            animation: bounce 2s infinite alternate, rotate 3s linear infinite;
+        }
+        @keyframes bounce {
+            0% {
+                transform: translateY(0);
+            }
+            100% {
+                transform: translateY(-10px);
+            }
+        }
+        @keyframes rotate {
+            0% {
+                transform: rotate(0deg);
+            }
+            100% {
+                transform: rotate(360deg);
+            }
         }
         #hero h1 {
             font-size: 3em;
@@ -73,16 +99,9 @@
             color: #444;
             margin-bottom: 30px;
         }
-        #eas video {
+        #eas video, #eas img {
             width: 70%;
             max-width: 600px;
-            border-radius: 10px;
-            box-shadow: 0px 4px 10px rgba(0,0,0,0.1);
-            margin-bottom: 20px;
-        }
-        #eas img {
-            width: 70%;
-            max-width: 300px;
             border-radius: 10px;
             box-shadow: 0px 4px 10px rgba(0,0,0,0.1);
             margin-bottom: 20px;
@@ -118,6 +137,10 @@
 
 <!-- Hero Section -->
 <section id="hero">
+    <div class="hero-icons">
+        <i class="fas fa-bell icon-animate"></i>
+        <i class="fas fa-shield-alt icon-animate"></i>
+    </div>
     <h1>Welcome to DepthUI</h1>
     <p>Experience safety at its best with our Emergency Alert System.</p>
     <a href="#eas">Learn More</a>
