--- a/EAS/index.htm
+++ b/EAS/index.htm
@@ -44,7 +44,7 @@
         .icon-animate {
             font-size: 2.5em;
             color: #e94560;
-            animation: bounce 2s infinite alternate, rotate 3s linear infinite;
+            animation: bounce 2s , rotate 3s linear infinite;
         }
         @keyframes bounce {
             0% {
