--- a/X/sft/index.htm
+++ b/X/sft/index.htm
@@ -1,3 +1,89 @@
-<html>
-  <h1>Power On test</h1>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Fake OS for Game Console</title>
+    <style>
+        body {
+            margin: 0;
+            padding: 0;
+            background-color: black;
+            color: white;
+            display: flex;
+            flex-direction: column;
+            justify-content: center;
+            align-items: center;
+            font-family: Arial, sans-serif;
+            height: 100vh;
+            overflow: hidden;
+        }
+        .startup-screen img {
+            max-width: 300px;
+        }
+        .update-screen {
+            display: none;
+            text-align: center;
+        }
+        .options {
+            margin-top: 20px;
+        }
+        .option {
+            padding: 10px;
+            margin: 5px;
+            cursor: pointer;
+            border: 2px solid white;
+            border-radius: 5px;
+        }
+        .selected {
+            background-color: white;
+            color: black;
+        }
+    </style>
+</head>
+<body>
+    <div class="startup-screen" id="startupScreen">
+        <img src="/x.png" alt="Logo">
+    </div>
+    <div class="update-screen" id="updateScreen">
+        <h2>Do you want to update?</h2>
+        <div class="options">
+            <div class="option selected" id="ok">OK</div>
+            <div class="option" id="powerOff">Power Off</div>
+        </div>
+    </div>
+
+    <script>
+        window.addEventListener('load', () => {
+            // Simulate startup screen duration
+            setTimeout(() => {
+                document.getElementById('startupScreen').style.display = 'none';
+                document.getElementById('updateScreen').style.display = 'block';
+            }, 3000); // 3-second startup screen
+        });
+
+        // Controller-based option selection logic
+        let currentOption = 0;
+        const options = document.querySelectorAll('.option');
+
+        window.addEventListener('keydown', (event) => {
+            if (event.key === 'ArrowDown' || event.key === 'ArrowUp') {
+                options[currentOption].classList.remove('selected');
+
+                if (event.key === 'ArrowDown') {
+                    currentOption = (currentOption + 1) % options.length;
+                } else if (event.key === 'ArrowUp') {
+                    currentOption = (currentOption - 1 + options.length) % options.length;
+                }
+
+                options[currentOption].classList.add('selected');
+            } else if (event.key === 'Enter') {
+                if (currentOption === 1) { // Power Off option
+                    document.body.style.backgroundColor = 'black';
+                    document.getElementById('updateScreen').style.display = 'none';
+                }
+            }
+        });
+    </script>
+</body>
 </html>
