--- a/X/sft/index.htm
+++ b/X/sft/index.htm
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Fake OS for Game Console</title>
+    <title>XOS</title>
     <style>
         body {
             margin: 0;
@@ -43,7 +43,7 @@
 </head>
 <body>
     <div class="startup-screen" id="startupScreen">
-        <img src="/x.png" alt="Logo">
+        <img src="https://tudify.cloud/x.png" alt="Logo">
     </div>
     <div class="update-screen" id="updateScreen">
         <h2>Do you want to update?</h2>
