--- a/X/sft/index.htm
+++ b/X/sft/index.htm
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale:1.0">
     <title>System Update</title>
     <style>
         body {
@@ -86,33 +86,69 @@
     </div>
 
     <script>
+        let currentOption = 0;
+        const options = document.querySelectorAll('.option');
+        options[currentOption].classList.add('selected');
+
         window.addEventListener('load', () => {
-            let currentOption = 0;
-            const options = document.querySelectorAll('.option');
-            options[currentOption].classList.add('selected');
+            // Start checking for gamepad input
+            requestAnimationFrame(updateGamepadState);
+        });
 
-            // Controller-based option selection logic
-            window.addEventListener('keydown', (event) => {
-                if (event.key === 'ArrowDown' || event.key === 'ArrowUp') {
-                    options[currentOption].classList.remove('selected');
+        function updateGamepadState() {
+            const gamepads = navigator.getGamepads();
+            const gamepad = gamepads[0]; // We're using the first gamepad
 
-                    if (event.key === 'ArrowDown') {
-                        currentOption = (currentOption + 1) % options.length;
-                    } else if (event.key === 'ArrowUp') {
-                        currentOption = (currentOption - 1 + options.length) % options.length;
-                    }
+            if (gamepad) {
+                // Left stick movement logic (analog input)
+                const leftStickX = gamepad.axes[0]; // Left stick X-axis
+                const leftStickY = gamepad.axes[1]; // Left stick Y-axis
 
-                    options[currentOption].classList.add('selected');
-                } else if (event.key === 'Enter' || event.key === 'x' || event.key === 'a') {
-                    if (currentOption === 0) { // OK option
-                        startUpdate();
-                    } else if (currentOption === 1) { // Power Off option
-                        document.body.style.backgroundColor = 'black';
-                        document.getElementById('updateScreen').style.display = 'none';
+                // If the left stick moves enough, update the option selection
+                if (Math.abs(leftStickY) > 0.2) { // Stick threshold for vertical movement
+                    if (leftStickY < 0) {
+                        // Up direction
+                        moveSelection('up');
+                    } else if (leftStickY > 0) {
+                        // Down direction
+                        moveSelection('down');
                     }
                 }
-            });
-        });
+
+                // Check if the 'A' button or 'X' button is pressed (usually at index 0 or 1)
+                if (gamepad.buttons[0].pressed || gamepad.buttons[1].pressed) {
+                    selectOption();
+                }
+
+                // Listen for L3 (click on the left stick)
+                if (gamepad.buttons[8].pressed) { // L3 button (click left stick)
+                    selectOption();
+                }
+            }
+
+            requestAnimationFrame(updateGamepadState); // Keep checking for gamepad input
+        }
+
+        // Function to handle movement selection
+        function moveSelection(direction) {
+            options[currentOption].classList.remove('selected');
+            if (direction === 'down') {
+                currentOption = (currentOption + 1) % options.length;
+            } else if (direction === 'up') {
+                currentOption = (currentOption - 1 + options.length) % options.length;
+            }
+            options[currentOption].classList.add('selected');
+        }
+
+        // Handle option selection
+        function selectOption() {
+            if (currentOption === 0) { // OK option
+                startUpdate();
+            } else if (currentOption === 1) { // Power Off option
+                document.body.style.backgroundColor = 'black';
+                document.getElementById('updateScreen').style.display = 'none';
+            }
+        }
 
         function startUpdate() {
             // Hide the options
