--- a/index.html
+++ b/index.html
@@ -1,55 +1,194 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Site Offline</title>
-  <style>
-    @import url('https://fonts.googleapis.com/css2?family=DM+Sans:wght@400;700&display=swap');
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Tudify Cloud</title>
+    <style>
+        @import url('https://fonts.googleapis.com/css2?family=DM+Sans:wght@400;700&display=swap');
 
-    body {
-      margin: 0;
-      padding: 0;
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      height: 100vh;
-      background-color: #000;
-      color: #fff;
-      font-family: 'DM Sans', sans-serif;
-      text-align: center;
-    }
+        a {
+            color: white;
+            text-decoration: none;
+        }
 
-    .container {
-      display: flex;
-      flex-direction: column;
-      align-items: center;
-    }
+        * {
+            margin: 0;
+            padding: 0;
+            box-sizing: border-box;
+            font-family: 'DM Sans', sans-serif;
+        }
 
-    .logo {
-      width: 80px;
-      height: auto;
-      margin-bottom: 20px;
-    }
+        body {
+            background-color: #202020;
+            color: #ffffff;
+            line-height: 1.5;
+        }
 
-    h1 {
-      font-size: 24px;
-      font-weight: 700;
-      margin: 10px 0;
-    }
+        header {
+            display: flex;
+            justify-content: space-between;
+            align-items: center;
+            padding: 0.5rem 1rem;
+            background-color: #fcba03;
+            border-bottom: 2px solid #303030;
+        }
 
-    p {
-      font-size: 16px;
-      font-weight: 400;
-      line-height: 1.5;
-    }
-  </style>
+        header .nav {
+            display: flex;
+            align-items: center;
+            gap: 1rem;
+        }
+
+        header .nav a {
+            text-decoration: none;
+            color: #00bfff;
+            padding: 0.5rem 1rem;
+            border-radius: 5px;
+        }
+
+        header .nav a:hover {
+            background-color: #303030;
+        }
+
+        .main-container {
+            text-align: center;
+            padding: 2rem 1rem;
+        }
+
+        .banner {
+            display: flex;
+            flex-direction: column;
+            background-color: #fcba03;
+            padding: 2rem 1rem;
+            margin-bottom: 2rem;
+            min-height: 600px;
+            justify-content: center;
+            align-items: center;
+            color: #101010;
+            text-align: center;
+        }
+
+        .banner h1 {
+            font-size: 2rem;
+            font-weight: bold;
+            margin-bottom: 2rem;
+        }
+
+        .banner .discover-btn {
+            padding: 0.5rem 1.5rem;
+            background-color: #fcba03;
+            color: #fff;
+            border-radius: 5px;
+            text-decoration: none;
+            font-weight: bold;
+            display: inline-block;
+        }
+
+        .grid {
+            display: grid;
+            grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+            gap: 1.5rem;
+            padding: 1rem;
+        }
+
+        .card {
+            padding: 1.5rem;
+            display: flex;
+            flex-direction: column;
+            justify-content: center;
+            align-items: center;
+            border-radius: 10px;
+            text-align: center;
+            color: #101010;
+            font-weight: bold;
+            height: 400px;
+            box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.1);
+            overflow: hidden;
+            transition: transform 0.3s ease, box-shadow 0.3s ease;
+        }
+
+        .card h2 {
+            margin-bottom: 1rem;
+            font-size: 1.5rem;
+        }
+
+        .card p {
+            font-size: 1rem;
+            line-height: 1.6;
+            color: #303030;
+        }
+
+        .card.white { background-color: #e3e098; }
+        .card.pink { 
+            background-color: #3c5775; 
+            color: #ffffff; 
+        }
+        .card.black { 
+            background-color: #7fb884; 
+            color: #000000; 
+        }
+
+        .card:hover {
+            transform: translateY(-5px);
+            box-shadow: 0px 8px 12px rgba(0, 0, 0, 0.2);
+        }
+
+        footer {
+            text-align: center;
+            padding: 1rem;
+            margin-top: 2rem;
+            background-color: #101010;
+            color: #808080;
+            font-size: 0.9rem;
+        }
+
+        footer a {
+            color: #00bfff;
+            text-decoration: none;
+        }
+    </style>
 </head>
 <body>
-  <div class="container">
-    <img src="https://tudify.co.uk/logo.svg" alt="Logo" class="logo">
-    <h1>SITE OFFLINE</h1>
-    <p>This isn’t an error, we’re rebuilding.<br>Check back soon!</p>
-  </div>
+    <header>
+        <div class="logo">
+            <a href="#" style="font-size: 1.5rem; font-weight: bold;">Tudify cloud</a>
+        </div>
+        <nav class="nav">
+            <a href="https://tudify.co.uk">Large scale deployment</a>
+            <a href="/Luna-AI">small buisinesses</a>
+            <a href="#">AI branding tools</a>
+        </nav>
+    </header>
+    <div class="main-container">
+        <div class="banner">
+            <h1>Whether your buisness is big or small...</h1>
+            <a href="#" class="discover-btn">use tudify cloud</a>
+        </div>
+        <div class="grid">
+            <div class="card white">
+                <h2>Stability.</h2>
+                <p>Always rely on tudify to keep your stuff running.</p>
+            </div>
+            <div class="card pink">
+                <h2>Speed.</h2>
+                <p>Tudify cloud offers world-class speed.</p>
+            </div>
+            <div class="card black">
+                <h2>ALWAYS ON GUARD</h2>
+                <p>stopping DDOS attacks at the forefront.</p>
+            </div>
+        </div>
+    </div>
+    <footer>
+        <h1>Tudify cloud.</h1>
+        <p></p>
+        <p>a Tudify service</p>
+        <p>
+            <a href="https://tudify.co.uk">tudify retail</a> |
+            <a href="https://pearweb.webflow.io" target="_blank">pearweb.webflow.io</a>
+        </p>
+        <p>Hello from Telford.</p>
+    </footer>
 </body>
 </html>
