--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
             justify-content: space-between;
             align-items: center;
             padding: 0.5rem 1rem;
-            background-color: #fcba03;
+            background-color: #000000;
             border-bottom: 2px solid #303030;
         }
 
@@ -42,7 +42,7 @@
 
         header .nav a {
             text-decoration: none;
-            color: #00bfff;
+            color: #fcba03;
             padding: 0.5rem 1rem;
             border-radius: 5px;
         }
