--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
 
         .banner .discover-btn {
             padding: 0.5rem 1.5rem;
-            background-color: #fcba03;
+            background-color: #000000;
             color: #fff;
             border-radius: 5px;
             text-decoration: none;
